fixed standard buttons on iphone and andorid

--- a/res/generators/templates/application/public/css/iphone.css
+++ b/res/generators/templates/application/public/css/iphone.css
@@ -102,11 +102,6 @@ div#content {
     background: url(/public/images/pinstripes.png);
 }
 
-div#content form button{
-    width:300px;
-    margin-left: 10px;
-}
-
 div#content form button.createButton {
     position: absolute;
     bottom: 20px;
@@ -151,6 +146,9 @@ div#content ul li span.title {
     line-height: 75px;
 }
 
+
+/* FIXME: move image to /public/images/iphone.
+   Also 'Disclosure' is spelled incorrectly.*/
 div#content ul li a span.discloser_indicator {
     background: url('/public/images/listArrow.png') no-repeat center right;
     height: 100%;
@@ -171,13 +169,40 @@ div#content form fieldset {
     border: none;
 }
 
-div#content form button {
-    -webkit-appearance:push-button;
+div#content .standardButton {
+    -webkit-appearance: none;
+    -webkit-border-radius: 8px;
+    background: white;
+    color: #436395;
+    font-size: 15px;
     width:300px;
     height: 40px;
+    border: 1px solid black;
+    margin-top:10px;
+}
+
+div#content .standardButton a {
+    display: block;
+    text-decoration:none;
+    width: 100%;
+    color: #436395;
+    text-align: center;
+    line-height: 40px;
 }
 
 /* Forms */
+
+/* TODO: form elements in the content div should be
+   styled without the use of a form_list class. Also
+   the fieldset tag should be removed and the form
+   should be responsible for its margin, padding and
+   interior dimensions */
+
+/* FIXME: standardButtons should be centered on the page
+   but currently have excess margin on the left.
+   This also causes a problem for the <ul> tag as it is
+   also not centered... */
+
 div#content .form_list {
     padding-top: 5px;
 }
@@ -299,26 +324,20 @@ div#content ul#settings {
     margin: 0;
 }
 
+div#content ul#settings li.message {
+    line-height: 75px;
+    color: red;
+    text-align: center;
+}
+
 div#content div#reset {
     background-color: white;
     height: 100%;
+    padding-left:10px;
+    padding-right:10px;
 }
 
 div#content div#reset h3 {
-    margin-left:30px;
-    margin-right: 30px;
-}
-
-div.button {
-    margin: 10px 10px 10px 10px;
-    height: 45px;
-    -webkit-appearance:push-button;
-}
-
-div.button a {
-    display: block;
-    text-decoration:none;
     width: 100%;
-    color: black;
     text-align: center;
 }
